[package]
name = "wasmer_enumset"
version = "1.0.1"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"

description = "A library for creating compact sets of enums. Wasmer fork to work around `syn` issue. This will not be updated once the issue is fixed upstream."
keywords = ["enum", "bitset"]
categories = ["data-structures"]

documentation = "https://docs.rs/enumset/"
repository = "https://github.com/wasmerio/enumset"

readme = "../README.md"

license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "deprecated" }

[features]
serde = ["serde2", "wasmer_enumset_derive/serde"]

[dependencies]
wasmer_enumset_derive = { version = "0.5.0", path = "../enumset_derive" }
num-traits = { version = "0.2", default-features = false }
serde2 = { package = "serde", version = "1.0.91", default-features = false, optional = true }

[dev-dependencies]
bincode = { version = "1.0", features = ["i128"] }
serde_derive = "1.0.91"
serde_json = "1.0.39"
trybuild = "1.0.24"
rustversion = "1.0.2"
