[package]
name = "wasmer_enumset_derive"
version = "0.5.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2018"

description = "An internal helper crate for enumset. Not public API. Wasmer fork to work around `syn` issue. This will not be updated once the issue is fixed upstream."

repository = "https://github.com/wasmerio/enumset"

license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "deprecated" }

[lib]
proc-macro = true

[features]
serde = []

[dependencies]
darling = "0.10.0"
syn = "1"
quote = "1"
proc-macro2 = "1"
